nginx-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx-pod
  externalIPs:
    - 192.168.99.100
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30001
