nginx-app/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: svc.cluster.local
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
